--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </div>
             <!-- Estación de Soldadura -->
             <div class="product-card">
-                <img src="soldadura.jpg" alt="Estación de Soldadura">
+                <img src="soldadura.png" alt="Estación de Soldadura">
                 <h3>Estación de Soldadura</h3>
                 <p>$120.000</p>
                 <button>Agregar al carrito</button>
