--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </nav>
         <div class="icons">
             <a href="#" class="search-container"><i class="fas fa-search"></i></a>
-            <a href="#" class="cart-icon">🛒</a>
+           <a href="#" class="cart-icon">🛒 <span>0</span> <!-- Aquí se mostrará el número de productos -->
+</a>
         </div>
     </header>
 
@@ -43,56 +44,56 @@
                 <img src="microcontroladores.jpg" alt="Microcontrolador">
                 <h3>Microcontrolador</h3>
                 <p>$25.000</p>
-                <button>Agregar al carrito</button>
+                <button class="add-to-cart" data-name="Microcontrolador" data-price="25000">Agregar al carrito</button>
             </div>
             <!-- Resistencias y Capacitores -->
             <div class="product-card">
                 <img src="resistencias.jpg" alt="Resistencias y Capacitores">
                 <h3>Resistencias y Capacitores</h3>
                 <p>$200</p>
-                <button>Agregar al carrito</button>
+                <button class="add-to-cart" data-name="Resistencias y Capacitores" data-price="200">Agregar al carrito</button>
             </div>
             <!-- Transistores -->
             <div class="product-card">
                 <img src="transistor.jfif" alt="Transistor">
                 <h3>Transistor</h3>
                 <p>$1000</p>
-                <button>Agregar al carrito</button>
+                <button class="add-to-cart" data-name="Transistor" data-price="1000">Agregar al carrito</button>
             </div>
             <!-- Diodos LED -->
             <div class="product-card">
                 <img src="led.jpg" alt="Diodo LED">
                 <h3>Diodo LED</h3>
                 <p>$200</p>
-                <button>Agregar al carrito</button>
+                <button class="add-to-cart" data-name="Diodo LED" data-price="200">Agregar al carrito</button>
             </div>
             <!-- Sensor de Temperatura -->
             <div class="product-card">
                 <img src="sensor_temperatura.jpg" alt="Sensor de Temperatura">
                 <h3>Sensor de Temperatura</h3>
                 <p>$32000</p>
-                <button>Agregar al carrito</button>
+                <button class="add-to-cart" data-name="Sensor de Temperatura" data-price="32000">Agregar al carrito</button>
             </div>
             <!-- Osciloscopio Portátil -->
             <div class="product-card">
                 <img src="osciloscopio.jpg" alt="Osciloscopio Portátil">
                 <h3>Osciloscopio Portátil</h3>
                 <p>$250.000</p>
-                <button>Agregar al carrito</button>
+                <button class="add-to-cart" data-name="Osciloscopio Portátil" data-price="250000">Agregar al carrito</button>
             </div>
             <!-- Estación de Soldadura -->
             <div class="product-card">
                 <img src="soldadura.png" alt="Estación de Soldadura">
                 <h3>Estación de Soldadura</h3>
                 <p>$120.000</p>
-                <button>Agregar al carrito</button>
+                <button class="add-to-cart" data-name="Estación de Soldadura" data-price="120000">Agregar al carrito</button>
             </div>
             <!-- Fuentes de Alimentación -->
             <div class="product-card">
                 <img src="fuente_alimentacion.jpg" alt="Fuente de Alimentación">
                 <h3>Fuente de Alimentación</h3>
                 <p>$75.000</p>
-                <button>Agregar al carrito</button>
+                <button class="add-to-cart" data-name="Fuente de Alimentación" data-price="75000">Agregar al carrito</button>
             </div>
         </div>
     </section>
