--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
             <a href="#" class="search-container"><i class="fas fa-search"></i></a>
            <a href="#" class="cart-icon">🛒 <span>0</span> <!-- Aquí se mostrará el número de productos -->
 </a>
+            <!-- Contenedor del carrito -->
+<div id="cart-container" class="cart-container">
+    <h2>Carrito de Compras</h2>
+    <ul id="cart-list">
+        <!-- Aquí se agregarán los productos -->
+    </ul>
+    <button id="checkout-button">Pagar</button>
+    <button id="close-cart-button">Cerrar</button>
+</div>
         </div>
     </header>
 
