--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                 <p>$25.000</p>
                 <button class="add-to-cart" data-name="Microcontrolador" data-price="25000">Agregar al carrito</button>
             </div>
+            <!-- Tercera mano con lupa y base de cautin -->
+            <div class="product-card">
+                <img src="microcontroladores.jpg" alt="Tercera mano con lupa y base de cautin">
+                <h3>Tercera mano con lupa y base de cautin</h3>
+                <p>$40.000</p>
+                <button class="add-to-cart" data-name="Tercera mano con lupa y base de cautin" data-price="40000">Agregar al carrito</button>
+            </div>
             <!-- Resistencias y Capacitores -->
             <div class="product-card">
                 <img src="resistencias.jpg" alt="Resistencias y Capacitores">
