--- a/index.html
+++ b/index.html
@@ -40,6 +40,55 @@
     <section id="products" class="products-section">
         <h2>Productos Destacados</h2>
         <div class="product-grid">
+             <!-- Protoboard de 400 puntos -->
+            <div class="product-card">
+                <img src="...jpg" alt="Protoboard de 400 puntos">
+                <h3>Protoboard de 400 puntos</h3>
+                <p>$10.000</p>
+                <button class="add-to-cart" data-name="Protoboard de 400 puntos" data-price="10000">Agregar al carrito</button>
+            </div>
+             <!-- Protoboard de 830 puntos -->
+            <div class="product-card">
+                <img src="...jpg" alt="Protoboard de 830 puntos">
+                </h3>Protoboard de 830 puntos</h3>
+                <p>$15.000</p>
+                <button class="add-to-cart" data-name="Protoboard de 830 puntos" data-price="15000">Agregar al carrito</button>
+            </div>
+              <!-- Tercera mano con lupa e iluminación -->
+            <div class="product-card">
+                <img src="...jpg" alt="Tercera mano con lupa e iluminación">
+                <h3>Tercera mano con lupa e iluminación</h3>
+                <p>$100.000</p>
+                <button class="add-to-cart" data-name="Tercera mano con lupa e iluminación" data-price="100000">Agregar al carrito</button>
+            </div>
+              <!-- Bornera de  terminales para PCB -->
+            <div class="product-card">
+                <img src="...jpg" alt="Bornera de  terminales para PCB">
+                <h3>Bornera de 3 terminales para PCB</h3>
+                <p>$1.000</p>
+            <button class="add-to-cart" data-name="Bornera de  terminales para PCB" data-price="1000">Agregar al carrito</button>
+            </div>
+             <!-- Bornera de  terminales para PCB -->
+            <div class="product-card">
+                <img src="...jpg" alt="Foto celda LDR de 5mm">
+                <h3>Foto celda LDR de 5mm</h3>
+                <p>$1.000</p>
+            <button class="add-to-cart" data-name="Foto celda LDR de 5mm" data-price="1000">Agregar al carrito</button>
+            </div>
+             <!-- Interruptor de 2 posiciones-->
+            <div class="product-card">
+                <img src="...jpg" alt="Interruptor">
+                <h3>Interruptor </h3>
+                <p>$1.200</p>
+            <button class="add-to-cart" data-name="Interruptor " data-price="1200">Agregar al carrito</button>
+            </div>
+             <!-- Potenciómetro -->
+            <div class="product-card">
+                <img src="...jpg" alt="Potenciómetro ">
+                <h3>Potenciómetro  </h3>
+                <p>$1.800</p>
+            <button class="add-to-cart" data-name="Potenciómetro  " data-price="1800">Agregar al carrito</button>
+            </div>
             <!-- Microcontroladores -->
             <div class="product-card">
                 <img src="microcontroladores.jpg" alt="Microcontrolador">
