--- a/index.html
+++ b/index.html
@@ -54,6 +54,27 @@
                 <p>$15.000</p>
                 <button class="add-to-cart" data-name="Protoboard de 830 puntos" data-price="15000">Agregar al carrito</button>
             </div>
+             <!-- Arduino Pro-mini de 5V y 16MHz con Atmega 328P -->
+            <div class="product-card">
+                <img src="...jpg" alt="Arduino Pro-mini de 5V y 16MHz con Atmega 328P">
+                </h3>Arduino Pro-mini de 5V y 16MHz con Atmega 328P</h3>
+                <p>$45.000</p>
+                <button class="add-to-cart" data-name="Arduino Pro-mini de 5V y 16MHz con Atmega 328P" data-price="45000">Agregar al carrito</button>
+            </div>
+            <!-- Arduino MEGA con Chip CH340-->
+            <div class="product-card">
+                <img src="...jpg" alt="Arduino MEGA con Chip CH340">
+                </h3>Arduino MEGA con Chip CH340</h3>
+                <p>$240.000</p>
+                <button class="add-to-cart" data-name="Arduino MEGA con Chip CH340" data-price="240000">Agregar al carrito</button>
+            </div>
+            <!-- Arduino UNO R3 (Chip homologado CH340)-->
+            <div class="product-card">
+                <img src="...jpg" alt="Arduino UNO R3 (Chip homologado CH340)">
+                </h3>Arduino UNO R3 (Chip homologado CH340)</h3>
+                <p>$62.000</p>
+                <button class="add-to-cart" data-name="Arduino UNO R3 (Chip homologado CH340)" data-price="62000">Agregar al carrito</button>
+            </div>
               <!-- Tercera mano con lupa e iluminación -->
             <div class="product-card">
                 <img src="...jpg" alt="Tercera mano con lupa e iluminación">
@@ -91,10 +112,10 @@
             </div>
             <!-- Microcontroladores -->
             <div class="product-card">
-                <img src="microcontroladores.jpg" alt="Microcontrolador">
-                <h3>Microcontrolador</h3>
-                <p>$25.000</p>
-                <button class="add-to-cart" data-name="Microcontrolador" data-price="25000">Agregar al carrito</button>
+                <img src="microcontroladores.jpg" alt="Kit básico de inicio con arduino (T06)">
+                <h3>Kit básico de inicio con arduino (T06)</h3>
+                <p>$140.000</p>
+                <button class="add-to-cart" data-name="Kit básico de inicio con arduino (T06)" data-price="140000">Agregar al carrito</button>
             </div>
             <!-- Tercera mano con lupa y base de cautin -->
             <div class="product-card">
@@ -113,23 +134,23 @@
             <!-- Transistores -->
             <div class="product-card">
                 <img src="transistor.jfif" alt="Transistor">
-                <h3>Transistor</h3>
-                <p>$1000</p>
+                <h3>Transistor 2n2222</h3>
+                <p>$800</p>
                 <button class="add-to-cart" data-name="Transistor" data-price="1000">Agregar al carrito</button>
             </div>
             <!-- Diodos LED -->
             <div class="product-card">
                 <img src="led.jpg" alt="Diodo LED">
                 <h3>Diodo LED</h3>
-                <p>$200</p>
+                <p>$300</p>
                 <button class="add-to-cart" data-name="Diodo LED" data-price="200">Agregar al carrito</button>
             </div>
             <!-- Sensor de Temperatura -->
             <div class="product-card">
                 <img src="sensor_temperatura.jpg" alt="Sensor de Temperatura">
-                <h3>Sensor de Temperatura</h3>
-                <p>$32000</p>
-                <button class="add-to-cart" data-name="Sensor de Temperatura" data-price="32000">Agregar al carrito</button>
+                <h3>Sensor de temperatura y humedad DHT11</h3>
+                <p>$15000</p>
+                <button class="add-to-cart" data-name="Sensor de Temperatura" data-price="15000">Agregar al carrito</button>
             </div>
             <!-- Osciloscopio Portátil -->
             <div class="product-card">
@@ -142,15 +163,15 @@
             <div class="product-card">
                 <img src="soldadura.png" alt="Estación de Soldadura">
                 <h3>Estación de Soldadura</h3>
-                <p>$120.000</p>
+                <p>$190.000</p>
                 <button class="add-to-cart" data-name="Estación de Soldadura" data-price="120000">Agregar al carrito</button>
             </div>
             <!-- Fuentes de Alimentación -->
             <div class="product-card">
                 <img src="fuente_alimentacion.jpg" alt="Fuente de Alimentación">
                 <h3>Fuente de Alimentación</h3>
-                <p>$75.000</p>
-                <button class="add-to-cart" data-name="Fuente de Alimentación" data-price="75000">Agregar al carrito</button>
+                <p>$150.000</p>
+                <button class="add-to-cart" data-name="Fuente de Alimentación" data-price="150000">Agregar al carrito</button>
             </div>
         </div>
     </section>
