--- a/index.html
+++ b/index.html
@@ -50,28 +50,28 @@
              <!-- Protoboard de 830 puntos -->
             <div class="product-card">
                 <img src="...jpg" alt="Protoboard de 830 puntos">
-                </h3>Protoboard de 830 puntos</h3>
+                <h3>Protoboard de 830 puntos</h3>
                 <p>$15.000</p>
                 <button class="add-to-cart" data-name="Protoboard de 830 puntos" data-price="15000">Agregar al carrito</button>
             </div>
              <!-- Arduino Pro-mini de 5V y 16MHz con Atmega 328P -->
             <div class="product-card">
                 <img src="...jpg" alt="Arduino Pro-mini de 5V y 16MHz con Atmega 328P">
-                </h3>Arduino Pro-mini de 5V y 16MHz con Atmega 328P</h3>
+                <h3>Arduino Pro-mini de 5V y 16MHz con Atmega 328P</h3>
                 <p>$45.000</p>
                 <button class="add-to-cart" data-name="Arduino Pro-mini de 5V y 16MHz con Atmega 328P" data-price="45000">Agregar al carrito</button>
             </div>
             <!-- Arduino MEGA con Chip CH340-->
             <div class="product-card">
                 <img src="...jpg" alt="Arduino MEGA con Chip CH340">
-                </h3>Arduino MEGA con Chip CH340</h3>
+                <h3>Arduino MEGA con Chip CH340</h3>
                 <p>$240.000</p>
                 <button class="add-to-cart" data-name="Arduino MEGA con Chip CH340" data-price="240000">Agregar al carrito</button>
             </div>
             <!-- Arduino UNO R3 (Chip homologado CH340)-->
             <div class="product-card">
                 <img src="...jpg" alt="Arduino UNO R3 (Chip homologado CH340)">
-                </h3>Arduino UNO R3 (Chip homologado CH340)</h3>
+                <h3>Arduino UNO R3 (Chip homologado CH340)</h3>
                 <p>$62.000</p>
                 <button class="add-to-cart" data-name="Arduino UNO R3 (Chip homologado CH340)" data-price="62000">Agregar al carrito</button>
             </div>
