--- a/index.html
+++ b/index.html
@@ -42,88 +42,81 @@
         <div class="product-grid">
              <!-- Protoboard de 400 puntos -->
             <div class="product-card">
-                <img src="...jpg" alt="Protoboard de 400 puntos">
+                <img src="400p.png" alt="Protoboard de 400 puntos">
                 <h3>Protoboard de 400 puntos</h3>
                 <p>$10.000</p>
                 <button class="add-to-cart" data-name="Protoboard de 400 puntos" data-price="10000">Agregar al carrito</button>
             </div>
              <!-- Protoboard de 830 puntos -->
             <div class="product-card">
-                <img src="...jpg" alt="Protoboard de 830 puntos">
+                <img src="830p.png" alt="Protoboard de 830 puntos">
                 <h3>Protoboard de 830 puntos</h3>
                 <p>$15.000</p>
                 <button class="add-to-cart" data-name="Protoboard de 830 puntos" data-price="15000">Agregar al carrito</button>
             </div>
              <!-- Arduino Pro-mini de 5V y 16MHz con Atmega 328P -->
             <div class="product-card">
-                <img src="...jpg" alt="Arduino Pro-mini de 5V y 16MHz con Atmega 328P">
+                <img src="mini.png" alt="Arduino Pro-mini de 5V y 16MHz con Atmega 328P">
                 <h3>Arduino Pro-mini de 5V y 16MHz con Atmega 328P</h3>
                 <p>$45.000</p>
                 <button class="add-to-cart" data-name="Arduino Pro-mini de 5V y 16MHz con Atmega 328P" data-price="45000">Agregar al carrito</button>
             </div>
             <!-- Arduino MEGA con Chip CH340-->
             <div class="product-card">
-                <img src="...jpg" alt="Arduino MEGA con Chip CH340">
+                <img src="mega.png" alt="Arduino MEGA con Chip CH340">
                 <h3>Arduino MEGA con Chip CH340</h3>
                 <p>$240.000</p>
                 <button class="add-to-cart" data-name="Arduino MEGA con Chip CH340" data-price="240000">Agregar al carrito</button>
             </div>
             <!-- Arduino UNO R3 (Chip homologado CH340)-->
             <div class="product-card">
-                <img src="...jpg" alt="Arduino UNO R3 (Chip homologado CH340)">
+                <img src="arduinouno.png" alt="Arduino UNO R3 (Chip homologado CH340)">
                 <h3>Arduino UNO R3 (Chip homologado CH340)</h3>
                 <p>$62.000</p>
                 <button class="add-to-cart" data-name="Arduino UNO R3 (Chip homologado CH340)" data-price="62000">Agregar al carrito</button>
             </div>
               <!-- Tercera mano con lupa e iluminación -->
             <div class="product-card">
-                <img src="...jpg" alt="Tercera mano con lupa e iluminación">
+                <img src="mano3.png" alt="Tercera mano con lupa e iluminación">
                 <h3>Tercera mano con lupa e iluminación</h3>
                 <p>$100.000</p>
                 <button class="add-to-cart" data-name="Tercera mano con lupa e iluminación" data-price="100000">Agregar al carrito</button>
             </div>
               <!-- Bornera de  terminales para PCB -->
             <div class="product-card">
-                <img src="...jpg" alt="Bornera de  terminales para PCB">
+                <img src="bornera.png" alt="Bornera de  terminales para PCB">
                 <h3>Bornera de 3 terminales para PCB</h3>
                 <p>$1.000</p>
             <button class="add-to-cart" data-name="Bornera de  terminales para PCB" data-price="1000">Agregar al carrito</button>
             </div>
              <!-- Bornera de  terminales para PCB -->
             <div class="product-card">
-                <img src="...jpg" alt="Foto celda LDR de 5mm">
+                <img src="foto.png" alt="Foto celda LDR de 5mm">
                 <h3>Foto celda LDR de 5mm</h3>
                 <p>$1.000</p>
             <button class="add-to-cart" data-name="Foto celda LDR de 5mm" data-price="1000">Agregar al carrito</button>
             </div>
              <!-- Interruptor de 2 posiciones-->
             <div class="product-card">
-                <img src="...jpg" alt="Interruptor">
+                <img src="inter.jpg" alt="Interruptor">
                 <h3>Interruptor </h3>
                 <p>$1.200</p>
             <button class="add-to-cart" data-name="Interruptor " data-price="1200">Agregar al carrito</button>
             </div>
              <!-- Potenciómetro -->
             <div class="product-card">
-                <img src="...jpg" alt="Potenciómetro ">
+                <img src="poten.png" alt="Potenciómetro ">
                 <h3>Potenciómetro  </h3>
                 <p>$1.800</p>
             <button class="add-to-cart" data-name="Potenciómetro  " data-price="1800">Agregar al carrito</button>
             </div>
             <!-- Microcontroladores -->
             <div class="product-card">
-                <img src="microcontroladores.jpg" alt="Kit básico de inicio con arduino (T06)">
+                <img src="kit.png" alt="Kit básico de inicio con arduino (T06)">
                 <h3>Kit básico de inicio con arduino (T06)</h3>
                 <p>$140.000</p>
                 <button class="add-to-cart" data-name="Kit básico de inicio con arduino (T06)" data-price="140000">Agregar al carrito</button>
-            </div>
-            <!-- Tercera mano con lupa y base de cautin -->
-            <div class="product-card">
-                <img src="microcontroladores.jpg" alt="Tercera mano con lupa y base de cautin">
-                <h3>Tercera mano con lupa y base de cautin</h3>
-                <p>$40.000</p>
-                <button class="add-to-cart" data-name="Tercera mano con lupa y base de cautin" data-price="40000">Agregar al carrito</button>
-            </div>
+            </div>            
             <!-- Resistencias y Capacitores -->
             <div class="product-card">
                 <img src="resistencias.jpg" alt="Resistencias y Capacitores">
