--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
              <!-- Interruptor de 2 posiciones-->
             <div class="product-card">
-                <img src="inter.jpg" alt="Interruptor">
+                <img src="inter.png" alt="Interruptor">
                 <h3>Interruptor </h3>
                 <p>$1.200</p>
             <button class="add-to-cart" data-name="Interruptor " data-price="1200">Agregar al carrito</button>
@@ -112,7 +112,7 @@
             </div>
             <!-- Microcontroladores -->
             <div class="product-card">
-                <img src="kit.png" alt="Kit básico de inicio con arduino (T06)">
+                <img src="Kit.png" alt="Kit básico de inicio con arduino (T06)">
                 <h3>Kit básico de inicio con arduino (T06)</h3>
                 <p>$140.000</p>
                 <button class="add-to-cart" data-name="Kit básico de inicio con arduino (T06)" data-price="140000">Agregar al carrito</button>
