--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             </div>
             <!-- Sensor de Temperatura -->
             <div class="product-card">
-                <img src="sensor_temperatura.jpg" alt="Sensor de Temperatura">
+                <img src="sen.jfif" alt="Sensor de Temperatura">
                 <h3>Sensor de temperatura y humedad DHT11</h3>
                 <p>$15000</p>
                 <button class="add-to-cart" data-name="Sensor de Temperatura" data-price="15000">Agregar al carrito</button>
